@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* removed RESTRICT=autoconfig support.
+
 * fix compatibility regression introduced in file-5.05 involving MAGIC_NONE.
 
 * handle keyboard interrupts better during compilation; no longer display
